# ParkingSensor

./: .gitignore  .gitmodules  .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Changelog.md  ParkingSensor.ioc  Readme.md  STM32F103C8Tx_FLASH.ld
.github/: dependabot.yml  releaseBody.md
.github/workflows/: CMSISUpdate.yml  build.yml  publishRelease.yml  submodules-updater.yml
Core/Inc/: eepromConfig.h  main.h  parkingConfig.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: dma.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
Drivers/BSP/VL53L1X/inc/: VL53L1X_api.h  VL53L1X_calibration.h  vl53l1_platform.h
Drivers/BSP/VL53L1X/src/: VL53L1X_api.c  VL53L1X_calibration.c
Drivers/BSP/VL53L1X_ULD/src/: VL53L1X_api.c  vl53l1_platform.c
Drivers/BSP/VL53L1X_ULP/inc/: VL53L1X_ULP_api.h  VL53L1X_ULP_platform.h
Drivers/BSP/VL53L1X_ULP/src/: VL53L1X_ULP_api.c
Drivers/BSP/inc/: eeprom.h
Schematics/: Parking Sensor.kicad_prl  Parking Sensor.kicad_pro  Parking Sensor.kicad_sch  ~Parking Sensor.kicad_sch.lck
cmake/: STM32Cube.cmake  createTarget.cmake  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
